--- a/app/views/model_ranges/show.html.erb
+++ b/app/views/model_ranges/show.html.erb
@@ -4,16 +4,8 @@
   <strong>Name:</strong>
   <%= @model_range.name %>
 </p>
-
-<p>
-  <strong>Slug:</strong>
-  <%= @model_range.slug %>
-</p>
-
-<p>
-  <strong>Manufacturer:</strong>
-  <%= @model_range.manufacturer_id %>
-</p>
-
-<%= link_to 'Edit', edit_model_range_path(@model_range) %> |
-<%= link_to 'Back', model_ranges_path %>
+<ul>
+  <% @model_range.models.each do |model| %>
+    <li> <%= link_to model.name, manufacturer_model_range_model_path(@manufacturer, @model_range, model) %> </li>
+  <% end %>
+</ul>
