--- a/app/views/manufacturers/show.html.erb
+++ b/app/views/manufacturers/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @manufacturer.name %></h1>
 
 <ul>
-  <% @model_ranges.each do |model_range| %>
-    <li> <%= link_to model_range.name, manufacturer_model_range_path(@manufacturer, model_range) %> </li>
+  <% @manufacturer.model_ranges.each do |range| %>
+    <li><%= range.name %></li>
   <% end %>
 </ul>
