--- a/app/views/model_ranges/show.html.erb
+++ b/app/views/model_ranges/show.html.erb
@@ -1,11 +1,6 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @model_range.name %>
-</p>
+<h1><%= @model_range.manufacturer.name %> <%= @model_range.name %></h1>
 <ul>
   <% @model_range.models.each do |model| %>
-    <li> <%= link_to model.name, manufacturer_model_range_model_path(@manufacturer, @model_range, model) %> </li>
+    <li><%= model.name %></li>
   <% end %>
 </ul>
